# rexec

./: .gitignore  Cargo.toml  LICENSE  README.md  rexec.example.yml
src/: config.rs  main.rs
