[package]
name = "rexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
#actix-web = "4"

[profile.release]
lto = true